[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/WAT/WAT.gd" type="Script" id=1]
[ext_resource path="res://addons/WAT/UI/results.gd" type="Script" id=2]
[ext_resource path="res://addons/WAT/Runner/timer.gd" type="Script" id=3]
[ext_resource path="res://addons/WAT/UI/options.gd" type="Script" id=4]

[node name="WAT" type="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Runner" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Results" type="TabContainer" parent="Runner"]
margin_right = 1010.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/top_margin = 0
custom_constants/side_margin = 0
tab_align = 0
script = ExtResource( 2 )

[node name="Details" type="HBoxContainer" parent="Runner"]
margin_top = 512.0
margin_right = 1010.0
margin_bottom = 542.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 50
alignment = 1

[node name="Timer" type="Label" parent="Runner/Details"]
margin_left = 381.0
margin_top = 8.0
margin_right = 459.0
margin_bottom = 22.0
text = "Not Running"
script = ExtResource( 3 )

[node name="RunCount" type="Label" parent="Runner/Details"]
margin_left = 509.0
margin_top = 8.0
margin_right = 629.0
margin_bottom = 22.0
text = "Ran Tests: 0 Times"

[node name="Options" type="HBoxContainer" parent="Runner"]
margin_top = 546.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
custom_constants/separation = 10
script = ExtResource( 4 )

[node name="VBox" type="VBoxContainer" parent="Runner/Options"]
margin_right = 245.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="RunAll" type="Button" parent="Runner/Options/VBox"]
margin_right = 245.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Run All Tests"

[node name="PrintStrayNodes" type="Button" parent="Runner/Options/VBox"]
margin_top = 20.0
margin_right = 245.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Print Stray Nodes"

[node name="Folder" type="VBoxContainer" parent="Runner/Options"]
editor/display_folded = true
margin_left = 255.0
margin_right = 500.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Run" type="Button" parent="Runner/Options/Folder"]
margin_right = 245.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Run Selected Directory"

[node name="Select" type="OptionButton" parent="Runner/Options/Folder"]
margin_top = 20.0
margin_right = 245.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
hint_tooltip = "Select A Folder to run tests only from that folder."
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 20
button_mask = 3
text = "res://tests"
align = 1
items = [ "res://tests", null, false, -1, null, "res://tests/FailExamples", null, false, -1, null, "res://tests/WAT", null, false, -1, null, "res://tests/WAT/Bootstrap", null, false, -1, null, "res://tests/WAT/Unit", null, false, -1, null ]
selected = 0

[node name="TestScript" type="VBoxContainer" parent="Runner/Options"]
editor/display_folded = true
margin_left = 510.0
margin_right = 755.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Run" type="Button" parent="Runner/Options/TestScript"]
margin_right = 245.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Run Selected Script"

[node name="Select" type="OptionButton" parent="Runner/Options/TestScript"]
margin_top = 20.0
margin_right = 245.0
margin_bottom = 40.0
hint_tooltip = "select a single test script to run (your choices depend on which folder is selected)."
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1

[node name="FormatResults" type="VBoxContainer" parent="Runner/Options"]
margin_left = 765.0
margin_right = 1010.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Expand" type="Button" parent="Runner/Options/FormatResults"]
margin_right = 245.0
margin_bottom = 20.0
text = "Expand All Results"

[node name="Collapse" type="Button" parent="Runner/Options/FormatResults"]
margin_top = 20.0
margin_right = 245.0
margin_bottom = 40.0
text = "Collapse All Results"
